# Copy Wt resources
FILE( COPY ${CMAKE_CURRENT_SOURCE_DIR}/trihlav DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
SET( TRIHLAV_DOCROOT ${CMAKE_CURRENT_BINARY_DIR}/docroot )
FILE( COPY ${WT_RESOURCES} DESTINATION ${TRIHLAV_DOCROOT} NO_SOURCE_PERMISSIONS)
FILE( COPY ${CMAKE_CURRENT_SOURCE_DIR}/style DESTINATION ${TRIHLAV_DOCROOT} )
INSTALL(DIRECTORY ${TRIHLAV_DOCROOT} DESTINATION share/trihlav)
INSTALL(DIRECTORY trihlav DESTINATION /etc)
INSTALL(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/docroot DESTINATION /etc/trihlav)

